May 9, 2017
  - Updated license, README, and added instrinsic 'eMAGmaVersion'.

May 8, 2017
  - Fixed a valence bug with Shuffle.

May 3, 2017
  - Black-box tensor constructors return TenSpcElt, TenSpcElt, Hmtp. That is, 
    the tensor (over vector spaces), the given tensor, and a homotopism from the
    given tensor TO the tensor over vector spaces. We may remove the last two 
    outputs at a later date.
  - Fixed a bug with StructureConstants.

April 29, 2017
  - Removed TensorOnVectorSpaces. Now black-box tensors go through this function
    internally, so such a tensor is returned over vector spaces. 
  - Fixed a bug with TensorOverCentroid.
  - Fixed a bug when printing homotopisms.
  - Homotopisms now go through a verification process. This can be skipped with 
    the optional parameter 'Check:=false'.

December 20, 2016
  - Fixed a few bugs.

December 19, 2016
  - Fixed valence issue with IsFullyNondegenerate.

December 11, 2016
  - Valence is now the number of modules in the frame. 
  - Added 'RandomCotensor.'

December 8, 2016
  - HeisenbergGroup now outputs a matrix group (GrpMat). To get a pc-group, use
    HeisenbergGroupPC, this is the old instrinsic with a more fitting name.

December 4, 2016
  - Included more verbose commands.

November 21, 2016
  - When creating a tensor from algebras (e.g. CommutatorTensor), the tensor on
    vector spaces is returned, along with a map from the algebra to the vector
    space.

September 26, 2016
  - Removed 'RecognizeStarAlgebra' from 'AdjointAlgebra' (TenSpcElt version).

August 6, 2016
  - Removed TensorAut.m from spec file. 

July 17, 2016
  - Added PseudoIsometryGroup for TenSptElt. It will attempt to use the
    intrinsic in SmallGenus first. Otherwise it will brute-force search if the
    field is finite. Only one shortcut is taken: we search through the
    normalizer of the isometry group. 
  - Added error messages concerning the tensor category. The direction of the 